Fix alignment of work experiences section

--- a/main/src/style.css
+++ b/main/src/style.css
@@ -711,7 +711,7 @@ ul {
 
 li:before {   
     content: "";  
-    border-color: transparent rgb(20, 20, 20);  
+    border-color: transparent rgb(253, 252, 252);  
     border-style: solid;  
     border-width: 0.35em 0 0.35em 0.45em;  
     display: block;  
@@ -1119,6 +1119,7 @@ li:before {
     min-height: 1px;
     height: 100%;
     position: relative;
+    margin-left: 00px;
   }
   /********************************/
   /*  SECTION WORK EXPERIENCE
